# eCFR-analyzer

./: .gitignore  README.md  journal.md  pyproject.toml
app_data/: agencies_word_count.csv  titles.json
src/: app.py  changes.py  download_data.py  download_titles.py  scratchpad.ipynb  title_changes.py  utils.py  word_counts.py
src/scripts/: count_words.py  download_titles.py  download_versions.py  run_all.sh  word_count.py
