[project]
name = "ecfr-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "streamlit-aggrid>=1.1.3",
    "streamlit-plotly-events>=0.0.6",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
